--- a/layouts/homes/single.html
+++ b/layouts/homes/single.html
@@ -21,6 +21,20 @@
         </div>
       </div>
     </div>
+
+    <!-- Masonry -->
+    <div class="row">
+      <div class="col-md-12">
+        <div class="grid" data-masonry='{ "itemSelector": ".grid-item", "columnWidth": ".grid-sizer", "percentPosition": true }'>
+          <div class="grid-sizer" style="width: 33%">
+          </div>
+          {{ range .Params.Images }}
+          <img class="grid-item" src="{{ .url | relURL }}" style="width: {{ .width }};">
+          {{ end }}
+        </div>
+      </div>
+    </div>
+
     <div class="row">
       <div class="col-md-12">
         <div class="project-content mt-50">
