--- a/layouts/homes/single.html
+++ b/layouts/homes/single.html
@@ -12,7 +12,7 @@
       </div>
       <div class="col-md-4">
         <div class="project-details">
-          <h4>Project Details</h4>
+          <h4>{{ .Params.Title }}</h4>
           <ul>
             {{ range .Params.Information }}
             <li><span>{{ .label }} :</span> <strong>{{ .info | markdownify }}</strong></li>
@@ -25,11 +25,13 @@
     <!-- Masonry -->
     <div class="row">
       <div class="col-md-12">
-        <div class="grid" data-masonry='{ "itemSelector": ".grid-item", "columnWidth": ".grid-sizer", "percentPosition": true }'>
+        <div class="grid popup-gallery" data-masonry='{ "itemSelector": ".grid-item", "columnWidth": ".grid-sizer", "percentPosition": true }'>
           <div class="grid-sizer" style="width: 33%">
           </div>
           {{ range .Params.Images }}
-          <img class="grid-item" src="{{ .url | relURL }}" style="width: {{ .width }};">
+          <a href="{{ .url | relURL }}">
+            <img class="grid-item" src="{{ .url | relURL }}" style="width: {{ .width }};">
+          </a>
           {{ end }}
         </div>
       </div>
