Replace Renovations with Decks and Sheds

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -53,17 +53,21 @@
     <section class="flex py-12">
       <div class="flex-1 text-center card">
         <img class="max-w-sm rounded-lg" src="{{.Site.BaseURL}}/img/ryan-ancill-nGsVMkRatgM-unsplash.jpg">
-        <div class="text-3xl py-4">New Construction</div>
+        <div class="text-3xl py-4">Custom Homes</div>
       </div>
       <div class="flex-1 text-center card">
         <img class="max-w-sm rounded-lg" src="{{.Site.BaseURL}}/img/jessie-mccall-a9_8YKoqIYo-unsplash.jpg">
         <div class="text-3xl py-4">Additions</div>
       </div>
       <div class="flex-1 text-center card">
-        <img class="max-w-sm rounded-lg" src="{{.Site.BaseURL}}/img/charles-deluvio-xC3cHbp4XJE-unsplash.jpg">
-        <div class="text-3xl py-4">Renovations</div>
+        <img class="max-w-sm rounded-lg" src="{{.Site.BaseURL}}/img/im3rd-media-HlJuQDBh3w4-unsplash.jpg">
+        <div class="text-3xl py-4">Decks & Sheds</div>
       </div>
     </section>
+
+    <div class="py-12 text-center">
+      <a class="btn text-4xl py-6 px-10" href="tel:+18042406305"><i class="fas fa-phone-alt"></i>&nbsp;Call Now</a>
+    </div>
 
     <section class="section-about">
       <h3>About us</h3>
@@ -71,10 +75,6 @@
       <p>We're here to serve you in Powhatan, Goochland, Chesterfield, Amelia, Cumberland, Farmville, Buckingham and the surrounding areas.</p>
       <p>Whether you're looking for your first home or your <strong>forever</strong> home, we would love to serve you!</p>
     </section>
-
-    <div class="py-12 text-center">
-      <a class="btn text-4xl py-6 px-10" href="tel:+18042406305"><i class="fas fa-phone-alt"></i>&nbsp;Call Now</a>
-    </div>
 
     <footer class="px-12 py-12 text-center">
       <p><a href="https://www.facebook.com/newimagesinc"><i class="fab fa-facebook-square"></i>&nbsp;Follow us on Facebook</a></p>
