Add OpenGraph meta tags

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,10 +7,13 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
+  <meta property="og:title" content="New Images, Inc.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="{{.Site.BaseURL}}">
+  <meta property="og:image" content="{{.Site.BaseURL}}/img/logo-150.png">
+  <meta property="og:description" content="We build quality homes in any price range!">
+  <meta property="og:determiner" content="">
+  <meta property="og:locale" content="en_US">
 
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
