--- a/layouts/index.html
+++ b/layouts/index.html
@@ -9,12 +9,12 @@
 
   <meta property="og:title" content="New Images, Inc.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="{{.Site.BaseURL}}">
+  <meta property="og:url" content="{{.Site.BaseURL}}/">
   <meta property="og:image" content="{{.Site.BaseURL}}/img/logo-150.png">
   <meta property="og:description" content="We build quality homes in any price range!">
   <meta property="og:determiner" content="">
   <meta property="og:locale" content="en_US">
-  <meta property="fb:app_id" content="113296066822580">
+  <meta property="fb:app:id" content="newimagesinc">
 
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
