--- a/layouts/index.html
+++ b/layouts/index.html
@@ -15,7 +15,7 @@
   <meta property="og:determiner" content="">
   <meta property="og:locale" content="en_US">
   <meta property="fb:app_id" content="newimagesinc">
-  <meta property="fb:app:id" content="newimagesinc">
+  <meta property="fb:app:id" content="113296066822580">
 
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
