--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,6 +79,10 @@ body {
   font-size: 4em;
 }
 
+.block {
+  display: block;
+}
+
 .flex {
   display: flex;
 }
@@ -97,32 +101,62 @@ body {
   padding: 2em;
 }
 
+.text-left {
+  text-align: left;
+}
 .text-center {
   text-align: center;
 }
+.text-right {
+  text-align: right;
+}
 
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
-
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
 }
-
 .text-3xl {
   font-size: 1.875rem;
   line-height: 2.25rem;
 }
-
 .text-4xl {
   font-size: 2.25rem;
   line-height: 2.5rem;
 }
 
+.no-underline {
+  text-decoration: none;
+}
+
+.box-border {
+  box-sizing: border-box;
+}
+.box-content {
+  box-sizing: content-box;
+}
+
 .p-2 {
   padding: 0.5rem;
+}
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .p-4 {
@@ -181,6 +215,16 @@ body {
   padding-bottom: 12rem;
 }
 
+.w-full {
+  width: 100%;
+}
+
+.rounded {
+  border-radius: 0.25rem;
+}
+.rounded-md {
+  border-radius: 0.325rem;
+}
 .rounded-lg {
   border-radius: 0.5rem;
 }
@@ -205,6 +249,17 @@ body {
   background-color: rgba(0,104,162,1.0000000000);
 }
 
+.btn-normal {
+  background-color: rgba(0,123,191,1.0000000000);
+  color: #fff;
+  border: none;
+  outline: none;
+}
+
+.btn-normal:hover {
+  background-color: rgba(0,104,162,1.0000000000);
+}
+
 .card > img {
   max-width: 16rem;
 }
@@ -221,6 +276,9 @@ body {
 .section-about {
   padding: 1rem 12rem;
 }
+.section-contact {
+  padding: 1rem 12rem;
+}
 
 @media (max-width: 767.98px) {
   .section-about {
@@ -229,7 +287,14 @@ body {
     padding-left: 3rem;
     padding-right: 3rem;
   }
+  .section-contact {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    padding-left: 3rem;
+    padding-right: 3rem;
+  }
 }
+
 
 .main > footer {
   color: white;
