--- a/layouts/index.html
+++ b/layouts/index.html
@@ -63,35 +63,34 @@
 
     <div class="py-12 text-2xl text-center">{{.Site.Params.description}}</div>
 
-    <div class="py-12 text-center">
-      <a class="btn text-4xl py-6 px-10" href="tel:+18042406305"><i class="fas fa-phone-alt"></i>&nbsp;Call Now</a>
+    <div class="py-6 text-center">
+      <a href="#contact" class="text-2xl px-10 py-6 rounded-lg shadow-md btn-normal no-underline"><i class="fas fa-envelope"></i>&nbsp;Contact Us</a>
     </div>
 
-    <section class="flex py-12">
-      <div class="flex-1 text-center card">
-        <img class="max-w-sm rounded-lg" src="{{.Site.BaseURL}}img/ryan-ancill-nGsVMkRatgM-unsplash.jpg">
-        <div class="text-3xl py-4">Custom Homes</div>
-      </div>
-      <div class="flex-1 text-center card">
-        <img class="max-w-sm rounded-lg" src="{{.Site.BaseURL}}img/jessie-mccall-a9_8YKoqIYo-unsplash.jpg">
-        <div class="text-3xl py-4">Additions</div>
-      </div>
-      <div class="flex-1 text-center card">
-        <img class="max-w-sm rounded-lg" src="{{.Site.BaseURL}}img/im3rd-media-HlJuQDBh3w4-unsplash.jpg">
-        <div class="text-3xl py-4">Decks & Sheds</div>
+    <section id="services" class="py-12">
+      <h3 class="text-3xl text-center">Services</h3>
+      <div class="flex">
+        <div class="flex-1 text-center card">
+          <img class="max-w-sm rounded-lg" src="{{.Site.BaseURL}}img/ryan-ancill-nGsVMkRatgM-unsplash.jpg">
+          <div class="text-2xl py-4">Custom Homes</div>
+        </div>
+        <div class="flex-1 text-center card">
+          <img class="max-w-sm rounded-lg" src="{{.Site.BaseURL}}img/jessie-mccall-a9_8YKoqIYo-unsplash.jpg">
+          <div class="text-2xl py-4">Additions</div>
+        </div>
+        <div class="flex-1 text-center card">
+          <img class="max-w-sm rounded-lg" src="{{.Site.BaseURL}}img/im3rd-media-HlJuQDBh3w4-unsplash.jpg">
+          <div class="text-2xl py-4">Decks & Sheds</div>
+        </div>
       </div>
     </section>
-
-    <div class="py-12 text-center">
-      <a class="btn text-4xl py-6 px-10" href="tel:+18042406305"><i class="fas fa-phone-alt"></i>&nbsp;Call Now</a>
-    </div>
 
     <section id="contact" class="section-contact" style="background-image: url('{{.Site.BaseURL}}img/footer_lodyas.png'); background-repeat: repeat; color: white;">
       <h3 class="text-3xl text-center">Contact us</h3>
       <div class="px-2 text-center text-xl">
         <p>Have questions or looking for a quote?</p>
         <div class="py-4">
-          <a href="tel:+18042406305" class="text-xl px-12 py-4 rounded-lg shadow-md btn-normal no-underline"><i class="fas fa-phone-alt"></i>&nbsp;Call us</a>
+          <a href="tel:+18042406305" class="text-xl px-12 py-4 rounded-lg shadow-md btn-normal no-underline"><i class="fas fa-phone-alt"></i>&nbsp;Call Now</a>
         </div>
         <p>Or, send us a message:</p>
       </div>
@@ -120,7 +119,7 @@
     </section>
 
     <section id="about" class="section-about">
-      <h3 class="text-center text-3xl">About us</h3>
+      <h3 class="text-center text-3xl">About</h3>
       <div class="text-lg">
         <p>We have been in the home building industry for over 35 years. We create a unique build, paying attention not only to detail in cosetic appeal, but also the quality of construction.</p>
         <p>We're here to serve you in Powhatan, Goochland, Chesterfield, Amelia, Cumberland, Farmville, Buckingham and the surrounding areas.</p>
