--- a/layouts/index.html
+++ b/layouts/index.html
@@ -128,10 +128,11 @@
     </section>
 
     <footer class="px-12 py-12 text-center">
-      <p><a href="https://www.facebook.com/newimagesinc"><i class="fab fa-facebook-square"></i>&nbsp;Follow us on Facebook</a></p>
-      <p><a href="tel:+18042406305"><i class="fas fa-phone-alt"></i>&nbsp;Call us today</a></p>
+      <div class="py-2 text-lg"><a href="https://www.facebook.com/newimagesinc"><i class="fab fa-facebook-square text-2xl"></i><br>Follow us on Facebook</a></div>
+      <div class="py-2 text-lg"><a href="tel:+18042406305"><i class="fas fa-phone-alt text-2xl"></i><br>Call Now</a></div>
+      <div class="py-2 text-lg"><a href="#contact"><i class="fas fa-envelope text-2xl"></i><br>Contact Us</a></div>
       <hr>
-      Copyright &copy; New Images, Inc. {{ now.Format "2006" }}
+      <div class="text-sm">Copyright &copy; New Images, Inc. {{ now.Format "2006" }}</div>
     </footer>
 
   </div>
