--- a/layouts/index.html
+++ b/layouts/index.html
@@ -76,18 +76,27 @@
             <div class="text-2xl py-4">Custom Homes</div>
           </div>
         </div>
-        <div class="flex-1 text-center card">
+        <div class="flex-1 text-center">
           <div class="m-4 inline-block shadow-md rounded-lg text-center card">
             <img class="max-w-sm rounded-t-lg" src="{{.Site.BaseURL}}img/jessie-mccall-a9_8YKoqIYo-unsplash.jpg">
             <div class="text-2xl py-4">Additions</div>
           </div>
         </div>
-        <div class="flex-1 text-center card">
+        <div class="flex-1 text-center">
           <div class="m-4 inline-block shadow-md rounded-lg text-center card">
             <img class="max-w-sm rounded-t-lg" src="{{.Site.BaseURL}}img/im3rd-media-HlJuQDBh3w4-unsplash.jpg">
             <div class="text-2xl py-4">Decks & Sheds</div>
           </div>
         </div>
+      </div>
+    </section>
+
+    <section id="about" class="section-about">
+      <h3 class="text-center text-3xl">About</h3>
+      <div class="text-lg">
+        <p>We have been in the home building industry for over 35 years. We create a unique build, paying attention not only to detail in cosetic appeal, but also the quality of construction.</p>
+        <p>We're here to serve you in Powhatan, Goochland, Chesterfield, Amelia, Cumberland, Farmville, Buckingham and the surrounding areas.</p>
+        <p>Whether you're looking for your first home or your <strong>forever</strong> home, we would love to serve you!</p>
       </div>
     </section>
 
@@ -124,19 +133,8 @@
       </div>
     </section>
 
-    <section id="about" class="section-about">
-      <h3 class="text-center text-3xl">About</h3>
-      <div class="text-lg">
-        <p>We have been in the home building industry for over 35 years. We create a unique build, paying attention not only to detail in cosetic appeal, but also the quality of construction.</p>
-        <p>We're here to serve you in Powhatan, Goochland, Chesterfield, Amelia, Cumberland, Farmville, Buckingham and the surrounding areas.</p>
-        <p>Whether you're looking for your first home or your <strong>forever</strong> home, we would love to serve you!</p>
-      </div>
-    </section>
-
-    <footer class="px-12 py-12 text-center">
-      <div class="py-2 text-lg"><a href="https://www.facebook.com/newimagesinc"><i class="fab fa-facebook-square text-2xl"></i><br>Follow us on Facebook</a></div>
-      <div class="py-2 text-lg"><a href="tel:+18042406305"><i class="fas fa-phone-alt text-2xl"></i><br>Call Now</a></div>
-      <div class="py-2 text-lg"><a href="#contact"><i class="fas fa-envelope text-2xl"></i><br>Contact Us</a></div>
+    <footer class="text-center py-10">
+      <div class="py-2"><a href="https://www.facebook.com/newimagesinc"><i class="fab fa-facebook-square text-xl"></i><br>Follow us on Facebook</a></div>
       <hr>
       <div class="text-sm">Copyright &copy; New Images, Inc. {{ now.Format "2006" }}</div>
     </footer>
