--- a/layouts/index.html
+++ b/layouts/index.html
@@ -71,19 +71,19 @@
       <h3 class="py-6 text-3xl text-center">Services</h3>
       <div class="flex">
         <div class="flex-1 text-center">
-          <div class="m-4 inline-block shadow-md rounded-lg text-center card">
+          <div class="my-4 inline-block shadow-md rounded-lg text-center card">
             <img class="max-w-sm rounded-t-lg" src="{{.Site.BaseURL}}img/ryan-ancill-nGsVMkRatgM-unsplash.jpg">
             <div class="text-2xl py-4">Custom Homes</div>
           </div>
         </div>
         <div class="flex-1 text-center">
-          <div class="m-4 inline-block shadow-md rounded-lg text-center card">
+          <div class="my-4 inline-block shadow-md rounded-lg text-center card">
             <img class="max-w-sm rounded-t-lg" src="{{.Site.BaseURL}}img/jessie-mccall-a9_8YKoqIYo-unsplash.jpg">
             <div class="text-2xl py-4">Additions</div>
           </div>
         </div>
         <div class="flex-1 text-center">
-          <div class="m-4 inline-block shadow-md rounded-lg text-center card">
+          <div class="my-4 inline-block shadow-md rounded-lg text-center card">
             <img class="max-w-sm rounded-t-lg" src="{{.Site.BaseURL}}img/im3rd-media-HlJuQDBh3w4-unsplash.jpg">
             <div class="text-2xl py-4">Decks & Sheds</div>
           </div>
