Add telephone number to config

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -105,7 +105,7 @@
       <div class="px-2 text-center text-xl">
         <p>Have questions or looking for a quote?</p>
         <div class="py-4">
-          <a href="tel:+18042406305" class="text-xl px-12 py-4 rounded-lg shadow-md btn-normal no-underline"><i class="fas fa-phone-alt"></i>&nbsp;Call Now</a>
+          <a href="tel:{{.Site.Params.tel}}" class="text-xl px-12 py-4 rounded-lg shadow-md btn-normal no-underline"><i class="fas fa-phone-alt"></i>&nbsp;Call Now</a>
         </div>
         <p>Or, send us a message:</p>
       </div>
