--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,8 +59,13 @@ body {
   color: #f1f1f1;
 }
 
+.title {
+  color: rgba(0,123,191,1.0000000000);
+  display: flex;
+}
+
 .hero {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)), url("{{.Site.BaseURL}}img/header.jpg");
+  background-image: url("{{.Site.BaseURL}}img/newimagesheader.jpg");
   height: 350px;
   background-position: center;
   background-repeat: no-repeat;
@@ -69,38 +74,33 @@ body {
   box-shadow: 2px 0px 5px #333;
 }
 
-.hero-text {
-  text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: white;
-  text-shadow: 2px 2px 2px #333;
+.inline {
+  display: inline;
 }
-
-.hero-text h1 {
-  font-size: 4em;
-}
-
 .block {
   display: block;
 }
-
 .inline-block {
   display: inline-block;
 }
-
 .flex {
   display: flex;
 }
-
 .flex-1 {
   flex: 1 1 0%;
 }
+.justify-center {
+  justify-content: center;
+}
+.items-center {
+  align-items: center;
+}
 
+.flex-or-block {
+  display: flex
+}
 @media (max-width: 767.98px) {
-  .flex {
+  .flex-or-block {
     display: block;
   }
 }
@@ -235,6 +235,9 @@ body {
 .w-full {
   width: 100%;
 }
+.h-12 {
+  height: 3rem;
+}
 
 .rounded {
   border-radius: 0.25rem;
@@ -291,7 +294,7 @@ body {
 
 @media (max-width: 767.98px) {
   .card > img {
-    max-width: 24rem;
+    max-width: 20rem;
   }
 }
 
