Add image alt tags

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -56,7 +56,7 @@
 
   <div class="main">
     <div class="text-center py-4 title items-center justify-center">
-      <img src="{{.Site.BaseURL}}img/logo-only.png" class="h-12">
+      <img src="{{.Site.BaseURL}}img/logo-only.png" alt="New Images logo" class="h-12">
       <h1 class="inline">NEW IMAGES<small>, INC</small></h1>
     </div>
 
@@ -74,19 +74,19 @@
       <div class="flex-or-block">
         <div class="flex-1 text-center">
           <div class="my-4 inline-block shadow-md rounded-lg text-center card">
-            <img class="rounded-t-lg" src="{{.Site.BaseURL}}img/ryan-ancill-nGsVMkRatgM-unsplash.jpg">
+            <img class="rounded-t-lg" src="{{.Site.BaseURL}}img/ryan-ancill-nGsVMkRatgM-unsplash.jpg" alt="Man drawing plans for a custom-built home">
             <div class="text-2xl py-4">Custom Homes</div>
           </div>
         </div>
         <div class="flex-1 text-center">
           <div class="my-4 inline-block shadow-md rounded-lg text-center card">
-            <img class="rounded-t-lg" src="{{.Site.BaseURL}}img/jessie-mccall-a9_8YKoqIYo-unsplash.jpg">
+            <img class="rounded-t-lg" src="{{.Site.BaseURL}}img/jessie-mccall-a9_8YKoqIYo-unsplash.jpg" alt="Relaxing swing on a porch">
             <div class="text-2xl py-4">Additions</div>
           </div>
         </div>
         <div class="flex-1 text-center">
           <div class="my-4 inline-block shadow-md rounded-lg text-center card">
-            <img class="rounded-t-lg" src="{{.Site.BaseURL}}img/im3rd-media-HlJuQDBh3w4-unsplash.jpg">
+            <img class="rounded-t-lg" src="{{.Site.BaseURL}}img/im3rd-media-HlJuQDBh3w4-unsplash.jpg" alt="Deck built on the back of a home">
             <div class="text-2xl py-4">Decks & Sheds</div>
           </div>
         </div>
