--- a/layouts/index.html
+++ b/layouts/index.html
@@ -33,9 +33,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="{{.Site.BaseURL}}favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="{{.Site.BaseURL}}favicon-16x16.png">
 
-  {{ $normalize := resources.Get "css/normalize.css" | toCSS | minify | fingerprint }}
-  <link rel="stylesheet" href="{{ $normalize.Permalink }}">
-  {{ $style := resources.Get "css/style.css" | resources.ExecuteAsTemplate "css/style.css" . | toCSS | minify | fingerprint }}
+  {{ $style := resources.Get "css/style.css" | resources.ExecuteAsTemplate "css/style.css" . | resources.PostCSS | toCSS | minify | fingerprint }}
   <link rel="stylesheet" href="{{ $style.Permalink }}">
   <link href="{{.Site.BaseURL}}fontawesome/css/all.min.css" rel="stylesheet">
 
@@ -57,7 +55,7 @@
   <div class="main">
     <div class="text-center py-4 title items-center justify-center">
       <img src="{{.Site.BaseURL}}img/logo-only.png" alt="New Images logo" class="h-12">
-      <h1 class="inline">NEW IMAGES<small>, INC</small></h1>
+      <h1 class="inline text-3xl font-bold">NEW IMAGES<small>, INC</small></h1>
     </div>
 
     <div class="hero">
