Add find us on Google link

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -135,6 +135,7 @@
 
     <footer class="text-center py-10">
       <div class="py-2"><a href="https://www.facebook.com/newimagesinc"><i class="fab fa-facebook-square text-xl"></i><br>Follow us on Facebook</a></div>
+      <div class="py-2"><a href="https://g.page/NewImagesInc?we"><i class="fab fa-google text-xl"></i><br>Find us on Google</a></div>
       <hr>
       <div class="text-sm">Copyright &copy; New Images, Inc. {{ now.Format "2006" }}</div>
     </footer>
