--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,34 +17,16 @@ body {
   background-color: #fefefe;
 }
 
-.topnav {
-  background-color: #333;
-  overflow: hidden;
-}
-
-.topnav a {
-  float: left;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 25px;
-}
-
-.topnav a:hover {
-  cursor: pointer;
-  background-color: #ddd;
-  color: black;
-}
-
 .sidenav {
+  display: flex;
+  flex-direction: column;
+
   height: 100%;
   width: 0;
   position: fixed;
   z-index: 1;
   top: 0;
-  left: 0;
-  background-color: #333;
+  right: 0;
   overflow-x: hidden; /* Disable horizontal scroll */
   padding-top: 60px; /* Place content 60px from the top */
   transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
@@ -69,11 +51,6 @@ body {
   color: #f1f1f1;
 }
 
-.title {
-  color: rgba(0,123,191,1.0000000000);
-  display: flex;
-}
-
 .hero {
   background-image: url("{{.Site.BaseURL}}img/newimagesheader.jpg");
   height: 350px;
@@ -82,10 +59,6 @@ body {
   background-size: cover;
   position: relative;
   box-shadow: 2px 0px 5px #333;
-}
-
-.home-section {
-  padding: 2em;
 }
 
 .btn {
